# simple-rust-usage

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: .env.example  .gitignore  Cargo.toml
api/data/: en.json
api/migrations/: init.down.sql  init.up.sql
api/src/: main.rs  route.rs
api/src/auth/: handler.rs  route.rs  schema.rs
api/src/detail/: handler.rs  model.rs
api/src/general/: handler.rs  route.rs  schema.rs
api/src/image/: handler.rs  model.rs  route.rs  schema.rs
api/src/job/: handler.rs  model.rs  route.rs  schema.rs
api/src/project/: handler.rs  model.rs  schema.rs
api/src/testimonial/: handler.rs  mod.rs  model.rs  route.rs  schema.rs
api/src/user/: handler.rs  model.rs  route.rs  schema.rs
api/src/users/: handler.rs  model.rs  schema.rs
migrations/: init.down.sql
src/: main.rs  route.rs
src/auth/: handler.rs  route.rs  schema.rs
src/detail/: handler.rs  route.rs  schema.rs
src/general/: handler.rs  route.rs  schema.rs
src/image/: handler.rs  route.rs
src/job/: handler.rs  route.rs
src/project/: model.rs  route.rs
src/testimonial/: handler.rs  route.rs
src/user/: handler.rs  route.rs
