[package]
name = "rust-axum-postgres-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
libsqlite3-sys = "0.27.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.9.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
lazy_static = "1.0"
regex = "1.0"
rand = "0.8.5"
futures = "0.3.17"
futures-util = "0.3.30"
tokio-util = { version = "0.7.10", features = ["full"] }
image = "0.25.1"
bcrypt = "0.15"
